"$Id$"
Top of CVS tree:
------------------------------------------------------------------------------
For top of CVS tree:

Add reset_map_function into xutil.c that gets called after we lose a 
connection to the server.  This fixes a problem of some leftover images
from the previous session appearing in the map windows.  MSW 2001-08-12
client.c: add call to reset_map_data
proto.h: rebuilt
xutil.c: Add reset_map_function (mostly a copy of reset_map), make some
   other functions 'static' so they don't show up in proto.h


Fog of war code checkin. This is a fairly complex check in so
hopefully not too much breaks. This adds the feature where
tiles that have been seen but have since moved out of LOS 
are still shown on screen but with a 50% transparent black
tile over it show it is no longer in LOS.  Whatever was in that
tile is still shown until a new update comes in from the server at
which point the tile is cleared of all old info.
The old way was to just paint an opaque black tile.  To do this
the client now keeps state of as many tiles as it can and remembers
which tiles have been marked as cleared.  This is a fair amount
of memory so when -fog is not specified, the code reverts back to
a much smaller in memory map. To allow this, the map structure
is now dynamically allocated.  I also had to add a new protocol
command "newmap" so the client knows when to reinit its map state.
NOTE: This feature only works when the client is using SDL. No
      reason the other blitters can't take advantage of it, just
      hasn't been done yet.
client.c: fog_of_war global variable and newmap cmd added to CmdMapping
          Added "newmapcmd" to SetUp command.
client.h: FOG_MAP_SIZE macro and Player_Position struct
commands.c: handled "newmapcmd" sent from server, added NewmapCmd
              which just calls display_map_newmap();
gnome.c: stub function for display_map_newmap();
gx11.c: Modified all commands that take x,y coordinates to convert